[package]
name = "neige-lua"
authors = ["dgzhuya"]
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "一个简单的lua运行时"
readme = "README.md"
homepage = "https://github.com/dgzhuya/neige/tree/main/neige_lua"
repository = "https://github.com/dgzhuya/neige/tree/main/neige_lua"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
wasm = ["neige-undump/wasm", "neige-infra/wasm"]

[dependencies]
neige-undump = { path = "../neige_undump", version = "0.1.0" }
neige-infra = { path = "../neige_infra", version = "0.1.0" }
serde = { version = "1.0.203", features = ["derive"] }
