[package]
name = "neige_runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
wasm = ["neige_undump/wasm", "neige_infra/wasm"]

[dependencies]
neige_undump = { workspace = true }
neige_infra = { workspace = true }
