[package]
name = "neige_wasm"
version = "0.1.0"
edition = "2021"
license = "mit"
description = "neige lua wasm实现"

[lib]
crate-type = ["cdylib"]


[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
gloo-utils = "0.2.0"
js-sys = "0.3.69"
neige_runtime = { workspace = true, features = ["wasm"] }
neige_infra = { workspace = true, features = ["wasm"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.92"
